# PPO_IMPLEMENTATION

./: .gitignore  acceleration_summary.py  adaptive_acceleration_summary.py  get_results.py  mps_available.py  ppo.py  ppo_atari.py  ppo_continuous_action.py  ppo_continuous_action_1.py  ppo_continuous_action_accelerated.py  ppo_continuous_action_beta.py  ppo_continuous_action_beta_accelerated.py  ppo_continuous_action_beta_accelerated_logprob_space.py  ppo_continuous_action_beta_accelerated_parameters_space.py  ppo_continuous_action_beta_adaptive_accelerated_parameters_space.py  ppo_continuous_action_beta_lookahead.py  ppo_continuous_action_beta_polyak.py  ppo_continuous_action_normal_accelerated_logprob_space.py  ppo_continuous_action_normal_accelerated_parameters_space.py  ppo_continuous_action_normal_adaptive_accelerated_parameters_space.py  ppo_continuous_action_squashed_gaussian.py  pyproject.toml
PPO_LLM_RLHF/: download_models.py  pyproject.toml
PPO_LLM_RLHF/PPOTrainer/: ppo_rlhf.py
PPO_LLM_RLHF/src/: data_quality_check.py  data_utils.py  reward_utils.py  validate_data.py
